fixed configuration properties, added warning on intitial page

--- a/component-main/0.0.0/about.html
+++ b/component-main/0.0.0/about.html
@@ -128,6 +128,18 @@
 <h1 class="page">What&#8217;s Automatiko?</h1>
 <div id="preamble">
 <div class="sectionbody">
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+This is under development and not yet ready for public consumption, stay tuned!
+</td>
+</tr>
+</table>
+</div>
 <div class="imageblock">
 <div class="content">
 <img src="_images/automatiko.png" alt="automatiko">
