--- a/component-main/0.0.0/configuration.html
+++ b/component-main/0.0.0/configuration.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="../../_/css/site.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2G3H6TJRK"></script>
     <script>function gtag(){dataLayer.push(arguments)};window.dataLayer=window.dataLayer||[];gtag('js',new Date());gtag('config','G-R2G3H6TJRK')</script>
+    <link rel="icon" href="_images/automatiko-logo-circle.png" type="image/png">
   </head>
   <body class="article">
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://docs.automatiko.io">Automatiko</a>
+      <a class="navbar-item" href="https://docs.automatiko.io"><img src="_images/automatiko-logo-circle.png" width="52px"/>Automatiko</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
@@ -562,8 +563,7 @@ Automatiko also predefines several configuration to simplify use. These configur
 </main>
 </div>
 <footer class="footer">
-  <p>This page was built using the Antora default UI.</p>
-  <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
+  <p class="text-center">© 2020 Automatiko. All rights reserved.</p>
 </footer>
 <script src="../../_/js/site.js"></script>
 <script async src="../../_/js/vendor/highlight.js"></script>
