--- a/component-main/0.0.0/use-cases.html
+++ b/component-main/0.0.0/use-cases.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="../../_/css/site.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2G3H6TJRK"></script>
     <script>function gtag(){dataLayer.push(arguments)};window.dataLayer=window.dataLayer||[];gtag('js',new Date());gtag('config','G-R2G3H6TJRK')</script>
+    <link rel="icon" href="_images/automatiko-logo-circle.png" type="image/png">
   </head>
   <body class="article">
 <header class="header">
   <nav class="navbar">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://docs.automatiko.io">Automatiko</a>
+      <a class="navbar-item" href="https://docs.automatiko.io"><img src="_images/automatiko-logo-circle.png" width="52px"/>Automatiko</a>
       <button class="navbar-burger" data-target="topbar-nav">
         <span></span>
         <span></span>
@@ -198,7 +199,7 @@ sent to the correct location.</p>
 </div>
 <div class="paragraph">
 <p>To see this use case implemented with Automatiko have a look at
- <a href="examples/orders.html">Order</a> example</p>
+ <a href="examples.html#_order_management">Order</a> example</p>
 </div>
 </div>
 </div>
@@ -279,7 +280,7 @@ instance and new time window.</p>
 </div>
 <div class="paragraph">
 <p>To see this use case in action, have a look at
-the <a href="examples/leaks.html">Water leaks detection</a> example</p>
+the <a href="examples.html#_water_leak_detection">Water leaks detection</a> example</p>
 </div>
 </div>
 </div>
@@ -353,7 +354,7 @@ how human actors work with their daily routines and automate whatever is possibl
 </div>
 <div class="paragraph">
 <p>To see this use case in action, have a look at
-the <a href="examples.html#supportcase">Support case</a> example</p>
+the <a href="examples.html#_vacation_requests">Vacation request</a> example</p>
 </div>
 </div>
 </div>
@@ -447,7 +448,7 @@ to all involved parties.</p>
 </div>
 <div class="paragraph">
 <p>To see this use case in action, have a look at
-the <a href="examples.html#rescue">Rescue information</a> example</p>
+the <a href="examples.html#_weather_conditions">Weather conditions</a> example</p>
 </div>
 </div>
 </div>
@@ -490,7 +491,54 @@ to build reports, dashboards, backups etc.</p>
 </div>
 <div class="paragraph">
 <p>To see this use case in action, have a look at
-the <a href="examples.html#vacationrequest">Vacation requests</a> example</p>
+the <a href="examples.html#_vacation_requests">Vacation request</a> example</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_batch_processing"><a class="anchor" href="#_batch_processing"></a>Batch processing</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Batch processing is usually expressed as set of steps that need to happen
+to process given item. This makes a perfect fit for expressing it as
+workflow.</p>
+</div>
+<div class="paragraph">
+<p>Batch processing can have different mechanisms to be triggered</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>time based e.g. every Friday night, or every day etc</p>
+</li>
+<li>
+<p>trigger based e.g. file has been put into a folder</p>
+</li>
+<li>
+<p>manual e.g. user action triggers batch processing in background</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Regardless of how it is triggered it will go over defined "steps"
+to process set of items. Some can get the huge set of data as inputs
+some can split it into chunks or event individual items before triggering
+processing logic. All of these are excellent way to code as workflows.</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="_images/use-case-batch.png" alt="use case batch">
+</div>
+</div>
+<div class="paragraph">
+<p>Above example shows how files dropped into directory can be processed
+by different workflows depending on the type of the file (based on extension).
+There is different workflow that deals with text files and another that
+deals with pdf files.</p>
+</div>
+<div class="paragraph">
+<p>To see this use case in action, have a look at
+the <a href="examples.html#_file-processor">File processor</a> example</p>
 </div>
 </div>
 </div>
@@ -502,8 +550,7 @@ the <a href="examples.html#vacationrequest">Vacation requests</a> example</p>
 </main>
 </div>
 <footer class="footer">
-  <p>This page was built using the Antora default UI.</p>
-  <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
+  <p class="text-center">© 2020 Automatiko. All rights reserved.</p>
 </footer>
 <script src="../../_/js/site.js"></script>
 <script async src="../../_/js/vendor/highlight.js"></script>
