--- a/main/0.0.0/use-cases.html
+++ b/main/0.0.0/use-cases.html
@@ -79,7 +79,10 @@
     <a class="nav-link" href="components/persistence.html">Persistence</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#components/publishers.adoc">Publishers</a>
+    <a class="nav-link" href="components/errors.html">Error handling</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="components/management.html">Process management</a>
   </li>
 </ul>
   </li>
