--- a/main/0.0.0/workflow-function.html
+++ b/main/0.0.0/workflow-function.html
@@ -310,7 +310,7 @@ to generate the project structure</p>
 <p><code>gcp</code> - for Google Cloud Functions</p>
 </li>
 <li>
-<p><code>lambda</code> - for Amazon Lambda</p>
+<p><code>aws-lambda</code> - for Amazon Lambda</p>
 </li>
 </ul>
 </div>
@@ -387,6 +387,42 @@ Either by editing pom.xml file or using <code>-D</code> on the command lines. He
 </div>
 <div class="paragraph">
 <p>This command will give you as output a <code>httpsTrigger.url</code> that points to your function.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_aws_lambda"><a class="anchor" href="#_aws_lambda"></a>AWS Lambda</h3>
+<div class="paragraph">
+<p>For AWS Lambda functions it should be build with <code>aws-lambda</code> profile</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-plain hljs" data-lang="plain">mvn clean package -Paws-lambda</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>And then deployed to your AWS Lambda project using <code>sam</code></p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-plain hljs" data-lang="plain">sam deploy -t target/sam.jvm.yaml -g</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>This command will give you output similar to following</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-plain hljs" data-lang="plain">---------------------------------------------------------------------------------------
+Outputs
+---------------------------------------------------------------------------------------
+Key                 UserRegistrationFunctionApi
+Description         URL for application
+Value               https://xqe0c0addh.execute-api.us-east-2.amazonaws.com/
+----------------------------------------------------------------------------------------</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>The above url can be used to trigger lambda functions by appending the context path.</p>
 </div>
 </div>
 </div>
