--- a/main/0.0.0/getting-started-sw.html
+++ b/main/0.0.0/getting-started-sw.html
@@ -299,7 +299,7 @@ cd workflows</code></pre>
 <div class="listingblock">
 <div class="title">Windows</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">mkdir workflows
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">md workflows
 cd workflows</code></pre>
 </div>
 </div>
@@ -338,7 +338,7 @@ file extension must be either <code>.sw.json</code> or <code>.sw.yaml</code>
                 "message": "Hello World"
             },
             "end": true
-        },
+        }
     ]
 }</code></pre>
 </div>
