--- a/main/0.12.0/getting-started-sw.html
+++ b/main/0.12.0/getting-started-sw.html
@@ -38,7 +38,7 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="main" data-version="0.12.0">
+<div class="nav-container" data-component="main" data-version="0.0.0">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
@@ -160,14 +160,14 @@
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">Automatiko Documentation</span>
-    <span class="version">0.12.0</span>
+    <span class="version">0.0.0</span>
   </div>
   <ul class="components">
     <li class="component is-current">
       <span class="title">Automatiko Documentation</span>
       <ul class="versions">
-        <li class="version is-current is-latest">
-          <a href="about.html">0.12.0</a>
+        <li class="version is-latest">
+          <a href="../0.12.0/about.html">0.12.0</a>
         </li>
         <li class="version">
           <a href="../0.11.0/about.html">0.11.0</a>
@@ -202,8 +202,8 @@
         <li class="version">
           <a href="../0.1.0/about.html">0.1.0</a>
         </li>
-        <li class="version">
-          <a href="../0.0.0/about.html">0.0.0</a>
+        <li class="version is-current">
+          <a href="about.html">0.0.0</a>
         </li>
       </ul>
     </li>
@@ -215,7 +215,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="about.html" class="home-link"></a>
+  <a href="../0.12.0/about.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="about.html">Automatiko Documentation</a></li>
@@ -224,9 +224,9 @@
   </ul>
 </nav>
 <div class="page-versions">
-  <button class="version-menu-toggle" title="Show other versions of page">0.12.0</button>
+  <button class="version-menu-toggle" title="Show other versions of page">0.0.0</button>
   <div class="version-menu">
-    <a class="version is-current" href="getting-started-sw.html">0.12.0</a>
+    <a class="version" href="../0.12.0/getting-started-sw.html">0.12.0</a>
     <a class="version is-missing" href="../0.11.0/about.html">0.11.0</a>
     <a class="version is-missing" href="../0.10.0/about.html">0.10.0</a>
     <a class="version is-missing" href="../0.9.0/about.html">0.9.0</a>
@@ -238,7 +238,7 @@
     <a class="version is-missing" href="../0.3.0/about.html">0.3.0</a>
     <a class="version is-missing" href="../0.2.0/about.html">0.2.0</a>
     <a class="version is-missing" href="../0.1.0/about.html">0.1.0</a>
-    <a class="version" href="../0.0.0/getting-started-sw.html">0.0.0</a>
+    <a class="version is-current" href="getting-started-sw.html">0.0.0</a>
   </div>
 </div>
 </div>
@@ -299,7 +299,7 @@ cd workflows</code></pre>
 <div class="listingblock">
 <div class="title">Windows</div>
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">mkdir workflows
+<pre class="highlightjs highlight"><code class="language-bash hljs" data-lang="bash">md workflows
 cd workflows</code></pre>
 </div>
 </div>
@@ -338,7 +338,7 @@ file extension must be either <code>.sw.json</code> or <code>.sw.yaml</code>
                 "message": "Hello World"
             },
             "end": true
-        },
+        }
     ]
 }</code></pre>
 </div>
