--- a/main/0.21.0/getting-started-code.html
+++ b/main/0.21.0/getting-started-code.html
@@ -38,7 +38,7 @@
   </nav>
 </header>
 <div class="body">
-<div class="nav-container" data-component="main" data-version="0.21.0">
+<div class="nav-container" data-component="main" data-version="0.0.0">
   <aside class="nav">
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
@@ -172,14 +172,14 @@
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
     <span class="title">Automatiko Documentation</span>
-    <span class="version">0.21.0</span>
+    <span class="version">0.0.0</span>
   </div>
   <ul class="components">
     <li class="component is-current">
       <span class="title">Automatiko Documentation</span>
       <ul class="versions">
-        <li class="version is-current is-latest">
-          <a href="about.html">0.21.0</a>
+        <li class="version is-latest">
+          <a href="../0.21.0/about.html">0.21.0</a>
         </li>
         <li class="version">
           <a href="../0.20.0/about.html">0.20.0</a>
@@ -241,8 +241,8 @@
         <li class="version">
           <a href="../0.1.0/about.html">0.1.0</a>
         </li>
-        <li class="version">
-          <a href="../0.0.0/about.html">0.0.0</a>
+        <li class="version is-current">
+          <a href="about.html">0.0.0</a>
         </li>
       </ul>
     </li>
@@ -254,7 +254,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="about.html" class="home-link"></a>
+  <a href="../0.21.0/about.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="about.html">Automatiko Documentation</a></li>
@@ -263,9 +263,9 @@
   </ul>
 </nav>
 <div class="page-versions">
-  <button class="version-menu-toggle" title="Show other versions of page">0.21.0</button>
+  <button class="version-menu-toggle" title="Show other versions of page">0.0.0</button>
   <div class="version-menu">
-    <a class="version is-current" href="getting-started-code.html">0.21.0</a>
+    <a class="version" href="../0.21.0/getting-started-code.html">0.21.0</a>
     <a class="version" href="../0.20.0/getting-started-code.html">0.20.0</a>
     <a class="version" href="../0.19.0/getting-started-code.html">0.19.0</a>
     <a class="version" href="../0.18.0/getting-started-code.html">0.18.0</a>
@@ -286,7 +286,7 @@
     <a class="version is-missing" href="../0.3.0/about.html">0.3.0</a>
     <a class="version is-missing" href="../0.2.0/about.html">0.2.0</a>
     <a class="version is-missing" href="../0.1.0/about.html">0.1.0</a>
-    <a class="version" href="../0.0.0/getting-started-code.html">0.0.0</a>
+    <a class="version is-current" href="getting-started-code.html">0.0.0</a>
   </div>
 </div>
 </div>
@@ -312,7 +312,7 @@ code that is going to be executed by workflow is given as code rather than strin
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-All described examples below can be found in <a href="https://github.com/automatiko-io/automatiko-examples/workflows-java-dsl">Automatiko Examples repository</a>
+All described examples below can be found in <a href="https://github.com/automatiko-io/automatiko-examples/tree/main/workflows-java-dsl">Automatiko Examples repository</a>
 </td>
 </tr>
 </table>
