Use the REST abbreviation
Representational state transfer (REST)

--- a/main/0.16.0/service-interfaces.html
+++ b/main/0.16.0/service-interfaces.html
@@ -542,9 +542,9 @@ on the service interface operation level.
 </table>
 </div>
 <div class="sect2">
-<h3 id="_errors_in_rest_service_interface"><a class="anchor" href="#_errors_in_rest_service_interface"></a>Errors in ReST service interface</h3>
+<h3 id="_errors_in_rest_service_interface"><a class="anchor" href="#_errors_in_rest_service_interface"></a>Errors in REST service interface</h3>
 <div class="paragraph">
-<p>These errors (expressed as <code>error end events</code>) are represented as additional responses of the ReST operation.
+<p>These errors (expressed as <code>error end events</code>) are represented as additional responses of the REST operation.
 Such responses will follow normal definition and will include.</p>
 </div>
 <div class="ulist">
@@ -558,7 +558,7 @@ Such responses will follow normal definition and will include.</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>With that information consumers of the ReST service interface have all the information required to properly interact
+<p>With that information consumers of the REST service interface have all the information required to properly interact
 with the service.</p>
 </div>
 <div class="imageblock">
@@ -570,7 +570,7 @@ with the service.</p>
 <div class="sect2">
 <h3 id="_errors_in_graphql_service_interface"><a class="anchor" href="#_errors_in_graphql_service_interface"></a>Errors in GraphQL service interface</h3>
 <div class="paragraph">
-<p>GraphQL does not use response code as ReST do but instead all information is provided via response payload.
+<p>GraphQL does not use response code as REST do but instead all information is provided via response payload.
 In case of an error, GraphQL response will have both <code>errors</code> and <code>data</code> provided</p>
 </div>
 <div class="listingblock">
