--- a/main/0.17.0/configuration.html
+++ b/main/0.17.0/configuration.html
@@ -347,7 +347,7 @@
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">quarkus.automatiko.service-route-to-latest</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">QUARKUS_AUTOMATIKO_SERVICE_ROUTE_TO_LATEST</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Enables routing to latest version of ReST service endpoints if they are versioned</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Enables routing to latest version of REST service endpoints if they are versioned</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">false</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">No</p></td>
