Use the correct Quarkus Swagger UI endpoint

--- a/main/0.21.0/examples/operator.html
+++ b/main/0.21.0/examples/operator.html
@@ -651,7 +651,7 @@ operator web interface to the consumers outside of the Kubernetes cluster. Follo
 </div>
 <div class="paragraph">
 <p>once this is done you can see the fully described service at
- <a href="http://localhost:PORT/swagger-ui/#/" class="bare">http://localhost:PORT/swagger-ui/#/</a></p>
+ <a href="http://localhost:PORT/q/swagger-ui/#/" class="bare">http://localhost:PORT/q/swagger-ui/#/</a></p>
 </div>
 <div class="admonitionblock tip">
 <table>
