--- a/main/0.21.0/examples/weather.html
+++ b/main/0.21.0/examples/weather.html
@@ -413,7 +413,7 @@ get the docker instance <code>all in one</code>
 </div>
 <div class="paragraph">
 <p>once this is done you can see the fully described service at
- <a href="http://localhost:8080/swagger-ui/#/" class="bare">http://localhost:8080/swagger-ui/#/</a></p>
+ <a href="http://localhost:8080/q/swagger-ui/#/" class="bare">http://localhost:8080/q/swagger-ui/#/</a></p>
 </div>
 <div class="admonitionblock tip">
 <table>
