--- a/main/0.21.0/getting-started-bpmn.html
+++ b/main/0.21.0/getting-started-bpmn.html
@@ -588,7 +588,7 @@ folder of your project</p>
 </div>
 <div class="paragraph">
 <p>This will launch (after sometime when executed for the first time&#8230;&#8203;) a service
-that will have REST api available at <a href="http://localhost:8080/swagger-ui" class="bare">http://localhost:8080/swagger-ui</a></p>
+that will have REST api available at <a href="http://localhost:8080/q/swagger-ui" class="bare">http://localhost:8080/q/swagger-ui</a></p>
 </div>
 <div class="paragraph">
 <p>At this point you can use swagger ui to try out your newly built service
