--- a/main/0.21.0/examples/batch.html
+++ b/main/0.21.0/examples/batch.html
@@ -369,7 +369,7 @@ with an absolute folder path of your local file system.</p>
 </div>
 <div class="paragraph">
 <p>once this is done you can see the fully described service at
- <a href="http://localhost:8080/swagger-ui/#/" class="bare">http://localhost:8080/swagger-ui/#/</a></p>
+ <a href="http://localhost:8080/q/swagger-ui/#/" class="bare">http://localhost:8080/q/swagger-ui/#/</a></p>
 </div>
 <div class="admonitionblock tip">
 <table>
