--- a/main/examples/vacations.html
+++ b/main/examples/vacations.html
@@ -269,7 +269,7 @@ so there is no need for additional components to run this example.</p>
 </div>
 <div class="paragraph">
 <p>once this is done you can see the fully described service at
- <a href="http://localhost:8080/swagger-ui/#/" class="bare">http://localhost:8080/swagger-ui/#/</a></p>
+ <a href="http://localhost:8080/q/swagger-ui/#/" class="bare">http://localhost:8080/q/swagger-ui/#/</a></p>
 </div>
 <div class="admonitionblock tip">
 <table>
